<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:layout_marginTop="48dp"
        android:text="@string/dashboard_title"/>

    <Button
        android:id="@+id/button_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_button_body"
        android:layout_marginTop="8dp"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/button_face"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_button_face"
        android:textColor="@color/textColorPrimary"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_body" />


    <Button
        android:id="@+id/button_hand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_button_hand"
        android:textColor="@color/textColorPrimary"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_face" />


    <Button
        android:id="@+id/button_world"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_button_world"
        android:textColor="@color/textColorPrimary"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_hand" />

</androidx.constraintlayout.widget.ConstraintLayout>